--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,9 @@
 <!doctype html>
-<html lang="en" data-theme="corporate">
+<html lang="en data-theme="">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
